fixed navbar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,9 @@
 
 .links {
   color: black;
-  display: flex;
-  flex-direction: row;
-  padding: 15px;
-  border-radius: 10px;
-  font-size: 20px;
+  padding-top: 10px;
+  font-size: 18px;
+  text-align: center;
 }
 
 .btn {
@@ -59,14 +57,6 @@
   justify-content: space-around;
   padding: 15px;
   background: hsla(180, 2%, 65%, 0.2);
-}
-
-.company {
-  color: black;
-  width: 150px;
-  height: 80px;
-  border-radius: 10px;
-  overflow: "hidden",
 }
 
 .project {
